--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon main.js -e js,njk"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "bootstrap": "^5.3.2",
+    "express": "^4.18.2",
+    "nodemon": "^3.0.2",
+    "nunjucks": "^3.2.4"
   }
 }
